# franken_ocr

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_PLAN_FOR_FRANKEN_OCR.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.beads/: issues.jsonl
.beads/.br_history/: issues.20260625_021853.jsonl  issues.20260625_023249.jsonl  issues.20260625_024658.jsonl  issues.20260626_180014.jsonl
.github/workflows/: ci.yml  dist.yml
artifacts/perf/bd-1azu.14/: SHA256SUMS
artifacts/perf/bd-1gv.10.1/: README.md  SHA256SUMS  after_projector_hyperfine.json  after_projector_hyperfine.txt  baseline_projector_hyperfine.json  baseline_projector_hyperfine.txt  projector_bench_Cargo.toml  projector_bench_main.rs
benches/: gauntlet_harness.rs  nn_facade.rs
dist-v0.3.0/: focr-aarch64-apple-darwin-neon-sdot-i8mm.sha256  focr-aarch64-unknown-linux-gnu.sha256  focr-x86_64-apple-darwin.sha256  focr-x86_64-pc-windows-msvc.exe.sha256  focr-x86_64-unknown-linux-gnu.sha256
docs/: DECODER_E2E_PARITY_RESULTS.md  DISCREPANCIES.md  FEATURE_PARITY.md  NEGATIVE_EVIDENCE.md  PERF_LEDGER.md  PROPOSED_ARCHITECTURE.md  TEST_LOGGING.md  focrq-format.md  forward_wiring_intel.md
docs/conformance/: LADDER_HARNESS.md
docs/gauntlet/: BENCH_HARNESS.md
docs/testing/: LOGGING_AND_E2E.md
docs/zoo/: GOT_NEXT_STEPS.md  got-ocr2-spec.md  onechart-spec.md  tromr-spec.md
examples/: decoder_dump.rs  e2e_ocr.rs
models/: manifest.json
scripts/: check.sh  check_focrq_format.py  check_ledgers.py  check_oracle_provenance.py  check_test_logs.py  e2e_smoke.sh  fetch_model.sh  gauntlet_cert.py  gen_got_format_corpus.py  gen_got_token_id_fixtures.py  gen_reference_fixtures.py  gen_reference_fixtures_got.py  gen_tokenizer_fixtures.py  got_cer.py  oracle_bridge.py  spec_gate_e2e.sh  spine_watchdog_sweep.sh
scripts/baseline/: dump_stage_activations.py
src/: cli.rs  dist.rs  lib.rs  main.rs  pdf.rs  robot.rs
src/adaptive/: conformal.rs  mod.rs  tail_risk.rs  usl.rs
src/native_engine/: batch_scheduler.rs  connector.rs  decoder.rs  decoder_qwen2.rs  got.rs  mod.rs  model_arch.rs  moe.rs  nn.rs  postprocess.rs  rswa.rs  sampler.rs  spec.rs  tensor.rs  vision_bridge.rs  vision_clip.rs  vision_sam.rs  weights.rs
src/preprocess/: mod.rs
src/quant/: bit_allocator.rs  convert.rs  focrq.rs  int4.rs  int8.rs  mod.rs  recipe.rs
src/simd/: arm.rs  dispatch.rs  int4.rs  mod.rs  scalar.rs  x86.rs
src/tokenizer/: mod.rs  pretok.rs  tiktoken.rs  unicode_tables.rs
tests/: batched_sampler_parity.rs  chunked_prefill_parity.rs  cli_robot_golden.rs  e2e_recognize.rs  installer_e2e.sh  int32_overflow_proof.rs  lmhead_shard_parity.rs  many_pages_without_deadlock.rs  parity_ladder.rs  spec_decode_gate.rs  spec_ring_rollback.rs  tokenizer_conformance.rs
tests/fixtures/: robot_schema_v1.json  test_log_schema.json
tests/fixtures/golden/: PROVENANCE.md  cli_version.golden  convert_not_implemented.golden  doctor_not_implemented.golden  ocr_not_implemented.golden  robot_backends.golden  robot_health.golden
tests/fixtures/got/: l0c_prompt.json  oracle_fixtures.json
tests/fixtures/tokenizer/: README.md  corpus.txt
tests/fixtures/tokenizer_got/: expected.json
tests/fixtures/tokenizer_onechart/: expected.json
tests/support/: parity_harness.rs
(+8 files in other folders)
