[package]
name = "franken_ocr"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Pure-Rust, CPU-hyper-optimized runner for the Baidu Unlimited-OCR model (single-binary CLI: focr)"
readme = "README.md"

# Two binaries from one ENTRYPOINT (the shared `franken_ocr::cli_main` in the
# lib), but each from its OWN thin shim file so no source is shared across build
# targets (a file in two `[[bin]]` paths trips a cargo "present in multiple build
# targets" warning). The long name builds from `src/main.rs`; the short `focr`
# alias — the name agents and humans actually type — builds from
# `src/bin/focr.rs`. Both are one-line shims that just call `cli_main()`.
# Declaring them explicitly also disables the implicit package-named bin.
[[bin]]
name = "franken_ocr"
path = "src/main.rs"

[[bin]]
name = "focr"
path = "src/bin/focr.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# ── Phase 1+ dependencies (wired as the engine lands; see COMPREHENSIVE_PLAN_FOR_FRANKEN_OCR.md §4.1, bead p0). ──
# Kept commented so the Phase-0 skeleton builds with a minimal surface and a fast,
# reliable `cargo check`. Uncomment per the roadmap — these are the REAL intended deps,
# mirroring the proven franken_whisper wiring.
#
# asupersync         = { version = ">=0.3.5, <0.4", default-features = false }  # engine-owns-runtime (plan §3.3); local /dp/asupersync = 0.3.5
# ft-kernel-cpu      = { path = "../frankentorch/crates/ft-kernel-cpu" }   # int8 dot (SDOT/VNNI), GEMM, conv2d, sdpa, rmsnorm...
# ft-core            = { path = "../frankentorch/crates/ft-core" }         # TensorMeta / DType / Device / Float16
# ft-serialize       = { path = "../frankentorch/crates/ft-serialize" }    # safetensors BF16 load (the converter, Phase 2)
# half               = { version = "2", features = ["std"] }               # f16/bf16 storage types
# fsqlite            = { path = "../frankensqlite/crates/fsqlite" }         # run state + telemetry (NEVER rusqlite)
# fsqlite-types      = { path = "../frankensqlite/crates/fsqlite-types" }
# image              = "0.25"                                              # image decode/resize/normalize (preprocess front end)
# ctrlc              = "3.4"                                               # ShutdownController (sync main, plan §3.3)
# tracing            = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# uuid               = { version = "1", features = ["serde", "v4"] }
# sha2               = "0.10"                                              # .focrq provenance + model version tag

[lints.rust]
unsafe_code = "deny"

# Profiling build: full optimization + symbols/frame pointers so samplers
# (samply/Instruments) can attribute frames. NEVER profile the size-optimized
# `release` profile (strip=true → useless flamegraphs). See plan §9.1.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
